--- a/build.xml
+++ b/build.xml
@@ -18,14 +18,26 @@
         <!-- <property name="build.compiler" value="jikes"/> -->
         <!-- You might like to set up some overridable paths, etc.: -->
         <!-- <property name="mylib" value="../lib/mylib.jar"/> -->
+        
+        <!-- If we are running in windows, set dx8 property to true -->
+        <condition property="dx8" >
+            <os family="windows" />
+        </condition>
+        
     </target>
 
-    <target name="compile" depends="init">
+    <target name="core" depends="init">
         <!-- Both srcdir and destdir should be package roots. -->
         <!-- They could be different of course; in that case NetBeans can also be set -->
         <!-- up to compile to a different filesystem in the same way; see Compiler Types: -->
-         <ant dir="coreAPI" /> 
-         <ant dir="plugins/DX8" />
+         <ant dir="coreAPI" />
+    </target>
+    
+    <target name="windows_plugin" depends="core" if="dx8" >
+        <!-- Both srcdir and destdir should be package roots. -->
+        <!-- They could be different of course; in that case NetBeans can also be set -->
+        <!-- up to compile to a different filesystem in the same way; see Compiler Types: -->
+         <ant dir="plugins/DX8" /> 
     </target>
 
     <target name="javadoc" depends="init">
@@ -36,6 +48,7 @@
         <ant dir="plugins/DX8" target="javadoc"/>
     </target>
     
+    <target name="compile" depends="core,windows_plugin" />
     
     <target name="all" depends="init,compile" description="Build everything.">
         <echo message="Application built. Hello ${hello}!"/>
