Changed os name on createNativeDefinitons.java as it was incorrectly capitalised
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@27 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/src/native/build.xml
+++ b/plugins/linux/src/native/build.xml
@@ -23,7 +23,7 @@
     </target>
     
     <target name="createNativeDefinitions.java" depends="init">
-        <exec dir="." executable="./getDefinitions" os="linux" output="../java/net/java/games/input/NativeDefinitions.java">
+        <exec dir="." executable="./getDefinitions" os="Linux" output="../java/net/java/games/input/NativeDefinitions.java">
             <arg line="/usr/include/linux/input.h"/>
         </exec>
     </target>
