Changed controller.jar to jinput.jar as per http://www.JavaGaming.org/cgi-bin/JGNetForums/YaBB.cgi?board=jinput;action=display;num=1059866464
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@28 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/DX8/build.xml
+++ b/plugins/DX8/build.xml
@@ -29,7 +29,7 @@
         <javac srcdir="src/java" destdir="classes" debug="true" deprecation="true" source="1.4">
             <!-- To add something to the classpath: -->
             <classpath>
-                <pathelement location="lib/controller.jar"/>
+                <pathelement location="lib/jinput.jar"/>
                 <pathelement location="lib/jutils.jar"/>
             </classpath>
             <!-- To exclude some files: -->
@@ -81,7 +81,7 @@
                 <pathelement location="src/java"/>
             </sourcepath>
              <classpath>
-                <pathelement location="lib/controller.jar"/>
+                <pathelement location="lib/jinput.jar"/>
                 <pathelement location="lib/jutils.jar"/>
             </classpath>
         </javadoc>
