--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,11 @@
             <os family="windows" />
         </condition>
         
+        <!-- If we are running in linux, set linux property to true -->
+        <condition property="linux" >
+            <!--<os family="unix" />-->
+            <os name="linux" />
+        </condition>
     </target>
 
     <target name="core" depends="init">
@@ -40,15 +45,23 @@
          <ant dir="plugins/DX8" /> 
     </target>
 
+    <target name="linux_plugin" depends="core" if="linux" >
+        <!-- Both srcdir and destdir should be package roots. -->
+        <!-- They could be different of course; in that case NetBeans can also be set -->
+        <!-- up to compile to a different filesystem in the same way; see Compiler Types: -->
+         <ant dir="plugins/linux" /> 
+    </target>
+
     <target name="javadoc" depends="init">
         <!-- Both srcdir and destdir should be package roots. -->
         <!-- They could be different of course; in that case NetBeans can also be set -->
         <!-- up to compile to a different filesystem in the same way; see Compiler Types: -->
         <ant dir="coreAPI" target="javadoc"/>
         <ant dir="plugins/DX8" target="javadoc"/>
+        <ant dir="plugins/linux" target="javadoc"/>
     </target>
     
-    <target name="compile" depends="core,windows_plugin" />
+    <target name="compile" depends="core,windows_plugin,linux_plugin" />
     
     <target name="all" depends="init,compile" description="Build everything.">
         <echo message="Application built. Hello ${hello}!"/>
@@ -56,6 +69,7 @@
     
     <target name="clean" depends="init" description="Clean all build products.">
         <ant dir="plugins/DX8" target="clean"/>
+        <ant dir="plugins/linux" target="clean"/>
         <ant dir="coreAPI" target="clean"/>
     </target>
     
