--- a/coreAPI/build.xml
+++ b/coreAPI/build.xml
@@ -48,14 +48,14 @@
         <!--    Manifest-Version: 1.0 -->
         <!--    Main-Class: com.foo.Main -->
         <!-- 3. Pass to <jar>: manifest="myapp.mf" -->
-        <jar jarfile="bin/controller.jar" compress="true" basedir="classes">
+        <jar jarfile="bin/jinput.jar" compress="true" basedir="classes">
             <include name="net/**"/>
             <exclude name="**/*.java"/>
             <exclude name="**/*.form"/>
             <exclude name="myapp.mf"/>
             <exclude name="myapp.jar"/>
         </jar>
-         <copy file="bin/controller.jar" todir="../plugins/DX8/lib" />
+         <copy file="bin/jinput.jar" todir="../plugins/DX8/lib" />
     </target>
 
     <target name="all" depends="init,jar" description="Build everything.">
@@ -66,7 +66,7 @@
         <java classname="net.java.games.input.test.ControllerTextTest" 
               fork="true" failonerror="true" dir="src/tests">
             <classpath>
-                <pathelement location="bin/controller.jar"/>
+                <pathelement location="bin/jinput.jar"/>
                 <pathelement location="${utils}"/>
             </classpath>
             <!-- Pass some args, perhaps: -->
@@ -79,7 +79,7 @@
         <java classname="net.java.games.input.test.ControllerReadTest" 
               fork="true" failonerror="true" dir="src/tests">
             <classpath>
-                <pathelement location="bin/controller.jar"/>
+                <pathelement location="bin/jinput.jar"/>
                 <pathelement location="${utils}"/>
             </classpath>
             <!-- Pass some args, perhaps: -->
@@ -108,9 +108,9 @@
                 <include name="**/*.class"/>
             </fileset>
         </delete>
-    <delete file="bin/controller.jar"/>
+    <delete file="bin/jinput.jar"/>
     <delete dir="apidocs"/>
-    <delete file="../plugins/DX8/lib/controller.jar" />
+    <delete file="../plugins/DX8/lib/jinput.jar" />
     </target>
 
 </project>
