fixed ant clean fails on windows because the linux ant script can't find the classes dir to delete
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@29 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/build.xml
+++ b/plugins/linux/build.xml
@@ -46,7 +46,7 @@
     </target>
 
     <target description="Clean all build products." name="clean">
-        <delete>
+        <delete failonerror="no">
             <fileset dir="classes">
                 <include name="**/*.class"/>
             </fileset>
