--- a/coreAPI/build.xml
+++ b/coreAPI/build.xml
@@ -20,7 +20,7 @@
         <property name="utils" value="lib/jutils.jar"/>    
         <mkdir dir="apidocs"/> 
         <mkdir dir="classes"/> 
-        <mkdir dir="bin"/> 
+        <mkdir dir="dist"/> 
     </target>
 
     <target name="compile" depends="init">
@@ -48,25 +48,25 @@
         <!--    Manifest-Version: 1.0 -->
         <!--    Main-Class: com.foo.Main -->
         <!-- 3. Pass to <jar>: manifest="myapp.mf" -->
-        <jar jarfile="bin/jinput.jar" compress="true" basedir="classes">
+        <jar jarfile="dist/jinput.jar" compress="true" basedir="classes">
             <include name="net/**"/>
             <exclude name="**/*.java"/>
             <exclude name="**/*.form"/>
             <exclude name="myapp.mf"/>
             <exclude name="myapp.jar"/>
         </jar>
-         <copy file="bin/jinput.jar" todir="../plugins/DX8/lib" />
+         <copy file="dist/jinput.jar" todir="../plugins/DX8/lib" />
     </target>
 
     <target name="all" depends="init,jar" description="Build everything.">
-        <echo message="Application built. Hello ${hello}!"/>
+        <echo message="Build complete. JInput distribution located in /dist"/>
     </target>
 
     <target name="texttest" depends="init,all" description="Try running it.">
         <java classname="net.java.games.input.test.ControllerTextTest" 
               fork="true" failonerror="true" dir="src/tests">
             <classpath>
-                <pathelement location="bin/jinput.jar"/>
+                <pathelement location="dist/jinput.jar"/>
                 <pathelement location="${utils}"/>
             </classpath>
             <!-- Pass some args, perhaps: -->
@@ -79,7 +79,7 @@
         <java classname="net.java.games.input.test.ControllerReadTest" 
               fork="true" failonerror="true" dir="src/tests">
             <classpath>
-                <pathelement location="bin/jinput.jar"/>
+                <pathelement location="dist/jinput.jar"/>
                 <pathelement location="${utils}"/>
             </classpath>
             <!-- Pass some args, perhaps: -->
@@ -108,9 +108,13 @@
                 <include name="**/*.class"/>
             </fileset>
         </delete>
-    <delete file="bin/jinput.jar"/>
+    <delete file="dist/jinput.jar"/>
     <delete dir="apidocs"/>
     <delete file="../plugins/DX8/lib/jinput.jar" />
     </target>
+    
+    <target name="all" depends="init,jar" description="Build everything.">
+        <echo message="JInput has been built and jinput.jar is located in the dist directory."/>
+    </target>    
 
 </project>
