Added windows 98 to build options as jinput will work with it.
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@50 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/DX8/build.xml
+++ b/plugins/DX8/build.xml
@@ -38,7 +38,7 @@
             <exclude name="com/foo/somepackage/"/>
             -->
         </javac>
-        <exec dir="." executable="g++" os="Windows 2000, Windows XP">
+        <exec dir="." executable="g++" os="Windows 2000, Windows XP, Windows 98">
             <arg line=" -D_STRICT_ANSI -D_JNI_IMPLEMENTATION_"/> 
             <arg line=" -I'${java.home}/../include' -I'${java.home}/../include/win32' -Ic:/dx9/include"/>
             <arg line=" -o bin/dxinput.dll src/native/input.cpp  -Wl,--export-all-symbols"/>
