Initial rumbler test support
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@62 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/coreAPI/build.xml
+++ b/coreAPI/build.xml
@@ -85,6 +85,19 @@
             <!-- <arg file="myfile.txt"/> -->
         </java>
     </target>
+    <target name="rumbletest" depends="init,all" description="Try running it.">
+        <java classname="net.java.games.input.test.RumbleTest" 
+              fork="true" failonerror="true" dir="src/tests">
+            <classpath>
+                <pathelement location="bin/jinput.jar"/>
+                <pathelement location="${utils}"/>
+            </classpath>
+            <!-- Pass some args, perhaps: -->
+            <!-- <arg value="-myfile"/> -->
+            <!-- Will be given as an absolute path: -->
+            <!-- <arg file="myfile.txt"/> -->
+        </java>
+    </target>
     
     <target name="javadoc" depends="init" description="Javadoc for my API.">
         <javadoc packagenames="net.java.games.input.*" 
