Changes for the nightly build
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@73 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/OSX/build.xml
+++ b/plugins/OSX/build.xml
@@ -75,6 +75,7 @@
 	
     <target name="compileNativeJinputLib" depends="init,createJNIHeaders" >
         <ant dir="src/native" target="compileNativeJinputLib"/>
+	<copy file="src/native/libjinput.jnilib" todir="${dist}" />
         <copy file="${dist}/libjinput.jnilib" todir="../../coreAPI/src/tests/controller" />
     </target>
 </project>
