For some reason, my ubunto boxes with jdk 1.5.0_02 all seem to have java.home set to the jre dir, even though a 'which java' reveals it's using the jdk one, not the jre one. This causes the include dir not to be found and causes the build to fail. Made it so that the build file looks for includes relative to the jre dir and the jdk dir, so all systems should work (yeah, right)
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@94 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/src/native/build.xml
+++ b/plugins/linux/src/native/build.xml
@@ -48,7 +48,7 @@
 
     <target name="compileNativeJinputLib" depends="init">
         <exec dir="." executable="g++" os="Linux">
-            <arg line="-I${java.home}/include -I${java.home}/include/linux --shared -DLOGTRACE -o libjinput.so jinput.cpp eventInterface.cpp EventDevice.cpp joystickInterface.cpp JoystickDevice.cpp MixedDevice.cpp"/>
+            <arg line="-I${java.home}/include -I${java.home}/include/linux -I${java.home}/../include -I${java.home}/../include/linux --shared -DLOGTRACE -o libjinput.so jinput.cpp eventInterface.cpp EventDevice.cpp joystickInterface.cpp JoystickDevice.cpp MixedDevice.cpp"/>
         </exec>
     </target>
 </project>
