Updated the name of the linux native library
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@102 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,7 @@
         <ant dir="plugins/DX8" target="clean"/>
         <ant dir="plugins/linux" target="clean"/>
 		<ant dir="plugins/OSX" target="clean"/>
+    	<ant dir="plugins/awt" target="clean"/>
         <ant dir="coreAPI" target="clean"/>
         <delete failonerror="no">
             <fileset dir="dist">
