--- a/plugins/awt/build.xml
+++ b/plugins/awt/build.xml
@@ -7,7 +7,7 @@
     </target>
 
     <target depends="init" name="compile">
-        <javac debug="true" deprecation="true" destdir="classes" source="1.4" srcdir="src">
+        <javac debug="true" deprecation="true" destdir="classes" source="1.4" target="1.4" srcdir="src">
             <classpath>
                 <pathelement location="../../coreAPI/bin/jinput.jar"/>
                 <pathelement location="../../coreAPI/lib/jutils.jar"/>
