Unless cleanup is called from the same thread as init, the cleanup doesn't happen properly and events are left of the ff device meaning we run out of device space. Added a thread that init and cleanup are called from via methods on the interface.
Then it became apparent that rumble would only work from the same thread
as the others too, so thats added in there.

Nastyness all round.


git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@120 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/build.xml
+++ b/plugins/linux/build.xml
@@ -59,14 +59,12 @@
     </target>
 
     <target depends="init,compile" name="createJNIHeaders">
-        <javah>
+        <javah destdir="src/native">
             <classpath>
-                <pathelement path="src/java"/>
-                <pathelement location="jinput.jar"/>
+                <pathelement location="../../coreAPI/bin/jinput.jar"/>
+                <pathelement location="bin/linux.jar"/>
             </classpath>
-            <class name="net.java.games.input.LinuxDevice"/>
-            <class name="net.java.games.input.LinuxEnvironmentPlugin"/>
-            <class name="net.java.games.input.LinuxKeyboard"/>
+            <class name="net.java.games.input.JInputLibrary"/>
         </javah>
     </target>
     
