Added ControllerEventTest for testing event queueing
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@143 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/build.xml
+++ b/build.xml
@@ -45,6 +45,12 @@
 		</antcall>
 	</target>
 
+    <target name="eventtest" depends="init,all" description="Try running it.">
+		<antcall target="runtest">
+			<param name="mainclass" value="net.java.games.input.test.ControllerEventTest"/>
+		</antcall>
+	</target>
+
     <target name="rumbletest" depends="init,all" description="Try running it.">
 		<antcall target="runtest">
 			<param name="mainclass" value="net.java.games.input.test.RumbleTest"/>
