Linux: build fixes for 64 bit
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@151 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/build.xml
+++ b/plugins/linux/build.xml
@@ -64,6 +64,8 @@
     
     <target depends="init,createJNIHeaders" name="compileNativeJinputLib" if="linux">
         <ant dir="src/native" target="compileNativeJinputLib"/>
-        <copy file="src/native/libjinput-linux.so" todir="bin" />
+        <copy todir="bin">
+ 	       <fileset dir="src/native" includes="libjinput-linux*.so"/>
+	   </copy>
     </target>
 </project>
