Linux: Changed uname -i to uname -m to improve 64 bit detection in build scripts
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@166 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/src/native/build.xml
+++ b/plugins/linux/src/native/build.xml
@@ -26,7 +26,7 @@
 	
     <target name="compileNativeJinputLib">
 		<exec executable="uname" outputproperty="hwplatform">
-			<arg value="-i"/>
+			<arg value="-m"/>
 		</exec>
 		<condition property="libname" value="${libname64}" else="${libname32}">
 			<equals arg1="${hwplatform}" arg2="x86_64"/>
