Updates for webstart scripts
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@169 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/build.xml
+++ b/build.xml
@@ -86,7 +86,7 @@
     <target name="dist" depends="init" description="Build the distribution file for this system">
 		<iterate target="all"/>
         <mkdir dir="dist"/>
-		<jar jarfile="dist/jinput.jar" compress="true">
+		<jar jarfile="dist/jinput.jar" compress="true" duplicate="preserve">
 			<fileset dir="coreAPI/classes">
 				<include name="**/*.class"/>
 				<exclude name="**/test/*.class"/>
