Linux: Added more paths to the jni header search path
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@178 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/plugins/linux/src/native/build.xml
+++ b/plugins/linux/src/native/build.xml
@@ -35,6 +35,8 @@
 			<arg line="-O2 -Wall -c -fPIC"/>
 			<arg value="-I${java.home}/include"/>
 			<arg value="-I${java.home}/include/linux"/>
+			<arg value="-I${java.home}/../include"/>
+			<arg value="-I${java.home}/../include/linux"/>
 			<arg value="-I../../../common/src/native"/>
 			<mapper type="glob" from="*.c" to="*.o"/>
 			<fileset dir="." includes="*.c"/>
