Don't put the examples in the main jar
git-svn-id: https://svn.java.net/svn/jinput~svn/trunk@186 7e0c24bc-175d-482f-d6be-b36473eb9d59

--- a/build.xml
+++ b/build.xml
@@ -90,6 +90,7 @@
 			<fileset dir="coreAPI/classes">
 				<include name="**/*.class"/>
 				<exclude name="**/test/*.class"/>
+				<exclude name="**/example/*.class"/>
 			</fileset>
 			<fileset dir="plugins/linux/classes">
 				<include name="**/*.class"/>
